k8s-manifests/overlays/dev/superapp/bps/patch/dev-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bps-auth
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: bps-auth
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/bps-auth-dev:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bps-action
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: bps-action
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/bps-action-dev:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-proxy
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: api-proxy
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/api-proxy-dev:latest
        imagePullPolicy: Always
