k8s-manifests/overlays/dev/superapp/bps/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bps-auth-route
  namespace: ocpsuperapp-dev
spec:
  path: /api/v1/cbesuperapp/bps_auth
  to:
    name: bps-auth-dev
    weight: 100
    kind: Service
  host: devapi.superapp.cbe.com.et
  port:
    targetPort: 8080
  alternateBackends: []
